Fix build issues

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-url: 'https://karamo10.github.io'
+url: 'https://karamo10.github.io/JRsocialprofilelink/'
 baseurl: '/JRsocialprofilelink' # The subpath of your site
 title: 'JR Social Profile Link' # Name of your site
