--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-url: 'https://karamo10.github.io/JRsocialprofilelink/'
-baseurl: '/JRsocialprofilelink' # The subpath of your site
+url: ''
+baseurl: 'https://github.com/karamo10/jessicaRandall' # The subpath of your site
 title: 'JR Social Profile Link' # Name of your site
